...
    <string name="confirm_delete_title">Delete?</string>
    <string name="confirm_delete_message">Do you want to delete %s?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="aborted">Aborted</string>
...
    <string name="alias_cannot_be_empty">Alias cannot be empty</string>
    <string name="identity">Identity</string>
    <string name="boxaccount">A Qabelaccount</string>
    <string name="rename_identity">Rename %s</string>
    <string name="new_identity_name">Identity alias</string>
...

    <string name="headline_add_contact">Add contact</string>
    <string name="headline_add_identity">Add identity</string>
    <string name="headline_contacts">Contacts</string>
    <string name="headline_identities">Identities</string>
    <string name="headline_select_upload_folder">Select upload folder</string>
    <string name="create_identity_enter_name">Please enter a name for your identity. For example, \"Jana\" or \"Forum Troll\".</string>
    <string name="create_identity_enter_phone">Please enter a valid phone number, if you want to be found by other Qabel users. This phone number will be published on Qabel Index, the public contact directory for Qabel users. This is how you can be found. If you do not wish to be found, simply skip this step by clicking \"Next\". You can still add your phone number to your identity later.  We will
    <string name="create_identity_enter_email">Please enter a valid e-mail address if you want to be found by others Qabel users. This e-mail address will be published on Qabel Index, the public contact directory for Qabel users. This is how you can be found. If you do not wish to be found, simply skip this step by clicking \"Next\". You can still add your e-mail address to your identity later.  W
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="create_identity_successful">Identity created</string>
    <string name="dialog_headline_info">Information</string>
    <string name="create_identity_enter_all_data">Please fill in all fields</string>
    <string name="finish">Finish</string>
    <string name="create_identity_enter_name_hint">Alias of your identity</string>
    <string name="create_identity_create">Create a new identity</string>
    <string name="create_identity_import">Import an identity</string>
    <string name="function_not_yet_implenented">Function not yet implemented</string>
...
    <string name="create_account_password2_hint">Repeat the password</string>
    <string name="create_account_password_infos">Please enter your password</string>
    <string name="create_box_account">Register a Qabel account</string>
    <string name="login">Login</string>
    <string name="loggedInAs">Logged in as %s</string>
    <string name="create_account_username_hint">Username</string>
...
    <string name="create_account_email">Please enter your E-Mail. With this address can you reset your account</string>
    <string name="email_hint">Your E-Mail</string>
    <string name="create_account_passwords_dont_match">Your entered passwords don\'t match. Please enter the same password in both fields</string>
    <string name="create_account_final">Your Qabel account is now available.</string>
    <string name="create_identity_final_text">Please note that your identity is only stored to this device. Qabel or third parties do not have copies on their servers.  Please backup your identity as .qid and store it safely. The identity with the ending .qid contains the private key of your identity and should not be disclosed.</string>
    <string name="filebrowser">Files</string>
    <string name="settings_headline_boxaccount">Qabel account</string>
...
    <string name="headline_create_box_account">Create Qabel account</string>
    <string name="server_access_not_successfully_retry_question">Server access failed. Do you want to retry?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="dialog_headline_warning">Warning</string>
...
    <string name="server_access_failed_or_invalid_check_internet_connection">Server communication failed. Please check if you entered all data and that your internet connection is stable</string>
    <string name="password_to_short">This password is to short. It must contain at least 8 characters.</string>
    <string name="password_contains_user">The password is too similar to the username</string>
    <string name="password_digits_only">Numeric only passwords are not allowed.</string>
    <string name="email_address_invalid">Your email address is invalid. Please check it and try it again.</string>
    <string name="phone_number_invalid">Your phone number is invalid. Please check it and try again.</string>
    <string name="btn_create_identity">Create identity</string>
    <string name="create_account_final_headline">Qabel account registered</string>
    <string name="change_account_password_oldpassword_hint">Current password</string>
    <string name="change_account_password_newpassword1_hint">Password</string>
...
    <string name="contact_count">%d Contacts</string>
    <string name="contact">Contact</string>
    <string name="message_step_is_needed_or_close_app">%s is required to use Qabel. Are you sure you want close Qabel?</string>
    <string name="chat_message_hint">Enter text</string>
    <string name="refresh">Refresh</string>
...
