...
              android:layout_height="wrap_content"
              android:layout_alignParentBottom="true"
              android:layout_marginTop="@dimen/activity_vertical_margin"
              android:orientation="vertical">

    <de.qabel.qabelbox.ui.views.EditTextFont
        android:id="@+id/et_password1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/create_account_password1_hint"
        android:inputType="textPassword"
        style="@style/EditText"/>

    <de.qabel.qabelbox.ui.views.EditTextFont
        android:id="@+id/et_password2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/create_account_password2_hint"
        android:inputType="textPassword"
        style="@style/MessageText"/>

...
