<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_alignParentBottom="true"
              android:layout_marginTop="@dimen/activity_vertical_margin"
              android:orientation="vertical">

    <de.qabel.qabelbox.ui.views.EditTextFont
        android:id="@+id/et_username"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/create_account_username_hint"/>

    <de.qabel.qabelbox.ui.views.EditTextFont
        android:id="@+id/et_password"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/create_account_password1_hint"
        android:imeOptions="actionGo"
        android:inputType="textPassword"/>


    <de.qabel.qabelbox.ui.views.TextViewFont
        android:id="@+id/tv_message"
        style="@style/MessageText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/create_account_login_infos"/>

    <de.qabel.qabelbox.ui.views.TextViewFont
        android:id="@+id/reset_password"
        style="@style/TextViewButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:textColor="@color/colorPrimary"
        android:text="@string/btn_reset_password"
        />


</LinearLayout>




