<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <de.qabel.qabelbox.ui.views.EditTextFont
        android:id="@+id/edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/create_identity_enter_name_hint"
        android:lines="1"
        android:singleLine="true"
        android:textSize="@dimen/textsize_normal" />

    <de.qabel.qabelbox.ui.views.TextViewFont
        android:id="@+id/tv_message"
        style="@style/ListSecondTextLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_space"
        android:gravity="top"
        android:maxLines="12"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/create_identity_enter_name" />

</LinearLayout>




