...
    android:orientation="vertical">

    <de.qabel.qabelbox.views.EditTextFont
        android:layout_width="match_parent"
        android:lines="1"
        android:maxLines="1"
        android:id="@+id/et_name"
        android:singleLine="true"
        android:hint="@string/identity_enter_name_hint"
        android:layout_height="wrap_content"/>

    <Space
        android:layout_width="wrap_content"
...
